<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical"
              android:gravity="bottom"
              android:background="@drawable/login_page_design">
    <!-- Login Title -->
    <!-- <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text= "@string/login_title"
        android:gravity="center_horizontal"
        android:textSize="20dp"
        /> -->

    <!-- layout for Username -->
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:padding="10dp"
            android:gravity="bottom">
        <EditText
                android:id="@+id/username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:ems="10"
                android:inputType="text"
                android:hint="@string/username"
                >
            <requestFocus/>
        </EditText>
    </LinearLayout>
    <!-- layout for Password -->
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="0.01"
            android:padding="10dp"
            android:gravity="bottom"

            >
        <EditText
                android:id="@+id/password"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1.0"
                android:inputType="textPassword"
                android:hint="@string/password"
                />
    </LinearLayout>
    <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_margin="10dp"
            />
</LinearLayout>